api/tests/snapshots/safe_api_integration_test__safe_by_chain_key_invalid_address.snap
---
source: api/tests/safe_api_integration_test.rs
expression: response
---
data:
  safeByChainKey:
    code: INVALID_ADDRESS
    message: "Invalid address: must be 40 hex characters (20 bytes), got 11 characters"
    address: invalid_key
