api/tests/snapshots/safe_api_integration_test__safe_by_chain_key_not_found.snap
---
source: api/tests/safe_api_integration_test.rs
expression: response
---
data:
  safeByChainKey: ~
