api/tests/snapshots/safe_api_integration_test__safe_by_chain_key_query.snap
---
source: api/tests/safe_api_integration_test.rs
expression: response
---
data:
  safeByChainKey:
    address: "0x1111111111111111111111111111111111111111"
    moduleAddress: "0x2222222222222222222222222222222222222222"
    chainKey: "0x3333333333333333333333333333333333333333"
