api/tests/snapshots/safe_api_integration_test__safe_by_chain_key_query_returns_multiple_safes_for_same_owner.snap
---
source: api/tests/safe_api_integration_test.rs
assertion_line: 291
expression: response
---
data:
  safeByChainKey:
    address: "0x1111111111111111111111111111111111111111"
