api/tests/snapshots/safe_api_integration_test__safe_by_chain_key_query_returns_single_safe_for_deprecated_field.snap
---
source: api/tests/safe_api_integration_test.rs
assertion_line: 292
expression: response
---
data:
  safeByChainKey:
    address: "0x1111111111111111111111111111111111111111"
