api/tests/snapshots/safe_api_integration_test__safe_by_registered_node_not_found.snap
---
source: api/tests/safe_api_integration_test.rs
expression: response
---
data:
  safeByRegisteredNode: ~
