api/tests/snapshots/safe_api_integration_test__safe_by_registered_node_query.snap
---
source: api/tests/safe_api_integration_test.rs
assertion_line: 545
expression: response
---
data:
  safeByRegisteredNode:
    address: "0x1111111111111111111111111111111111111111"
    owners:
      - "0x7777777777777777777777777777777777777777"
    registeredNodes:
      - "0x8888888888888888888888888888888888888888"
