api/tests/snapshots/safe_api_integration_test__safe_by_selector_chain_key_returns_safes_list_for_single_match.snap
---
source: api/tests/safe_api_integration_test.rs
assertion_line: 329
expression: response
---
data:
  safeBy:
    safes:
      - address: "0x1111111111111111111111111111111111111111"
