api/tests/snapshots/safe_api_integration_test__safe_query.snap
---
source: api/tests/safe_api_integration_test.rs
expression: response
---
data:
  safe:
    address: "0x1111111111111111111111111111111111111111"
    moduleAddress: "0x2222222222222222222222222222222222222222"
    chainKey: "0x3333333333333333333333333333333333333333"
    threshold: "3"
    owners:
      - "0x3333333333333333333333333333333333333333"
      - "0x6666666666666666666666666666666666666666"
      - "0x7777777777777777777777777777777777777777"
