api/tests/snapshots/safe_api_integration_test__safe_query_invalid_hex_format.snap
---
source: api/tests/safe_api_integration_test.rs
expression: response
---
data:
  safe:
    code: INVALID_ADDRESS
    message: "Invalid address: must be 40 hex characters (20 bytes), got 11 characters"
    address: notvalidhex
